--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,11 @@
 body {
   font-size: 120%;
   font-family: Arial;
+  background-image: url(../images/Krabs.jpg) ;
+  background-repeat: no-repeat; 
+  background-size: cover; 
+  
+ 
 }
 
 button, input {
@@ -10,10 +15,11 @@ button, input {
 
 table {
   width: 100%;
+  background-color: aliceblue;
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  border: 1px solid #05125c;
   text-align: left;
   padding: 8px;
 }
@@ -30,6 +36,7 @@ tr:nth-child(even) {
   margin: 0 auto;
   max-width: 825px;
   text-align: center;
+ 
 }
 
 .total {
@@ -40,6 +47,7 @@ tr:nth-child(even) {
 .form {
   margin-top: 25px;
   width: 100%;
+  
 }
 
 .transactions {
@@ -48,4 +56,5 @@ tr:nth-child(even) {
   overflow: auto;
   width: 90%;
   margin: 0 auto;
+  background-color: #dddddd;
 }
